myteo/test/analyze/type_check/array/indexing.exp
Error: Expected type `String` but found `Int`
test/analyze/type_check/array/indexing.myte:10:3-7
 10 |   (x[0]: String);
    |    ^^^^

Error: Expected type `Array<Int>` but found `Int`
test/analyze/type_check/array/indexing.myte:11:3-7
 11 |   (x[0]: Array<Int>);
    |    ^^^^

Error: Expected type `Array<Array<Int>>` but found `Array<Array<String>>`
test/analyze/type_check/array/indexing.myte:21:3-7
 21 |   (x[0]: Array<Array<Int>>);
    |    ^^^^

Error: Expected type `Array<Int>` but found `Array<String>`
test/analyze/type_check/array/indexing.myte:22:3-10
 22 |   (x[0][0]: Array<Int>);
    |    ^^^^^^^

Error: Expected type `Array<Array<String>>` but found `String`
test/analyze/type_check/array/indexing.myte:23:3-13
 23 |   (x[0][0][0]: Array<Array<String>>);
    |    ^^^^^^^^^^