myteo/test/analyze/type_check/array/indexing.myte
module test

import std.array.Array

fun indexing(x: Array<Int>) {
  // Correct element type
  (x[0]: Int);
  
  // Incorrect element types
  (x[0]: String);
  (x[0]: Array<Int>);
}

fun nestedIndexing(x: Array<Array<Array<String>>>) {
  // Correct element types
  (x[0]: Array<Array<String>>);
  (x[0][0]: Array<String>);
  (x[0][0][0]: String);

  // Incorrect element types
  (x[0]: Array<Array<Int>>);
  (x[0][0]: Array<Int>);
  (x[0][0][0]: Array<Array<String>>);
}

fun elementTypes(x: Array<String>) {
  // All integer types work as index
  x[(0: Int)];
  x[(1: Byte)];
  x[(2: Long)];
}

fun main() {}